# terrain_following_mesh_generator

./: .gitignore  CODE_REVIEW_SUMMARY.md  README.md  environment.yml  mesh_visualizer.py  pyproject.toml  requirements.txt  run.py  terrain_config.yaml  terrain_config_rectangular.yaml
backup/: boundary_treatment.py
docs/: configuration.md
examples/: README.md  advanced_example.py  simple_example.py
mesh_output/: pipeline_metadata.json  terrain_structured.vtk
sampleConfigs/: 14M_fineMesh_smoothTransition.yaml  14M_smoothMesh.yaml  14M_ventosMesh.yaml  3M_coarse_nonSmoothMesh.yaml  5M_ventosMesh.yaml  7M_smoothMesh.yaml  terrain_config_14M_30m.yaml  terrain_config_4M_40m.yaml  terrain_config_8M_30m.yaml
terrain_mesh/: __init__.py  blockmesh_generator.py  boundary_treatment.py  config.py  grid_generator.py  mesh_quality.py  ogrid_blockmesh.py  ogrid_config.py  ogrid_generator.py  ogrid_pipeline.py  pipeline.py  terrain_processor.py  utils.py  visualizer.py
tests/: test_global_coordinates.py  test_metadata.py  test_rotation.py
