[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrain-mesh"
version = "1.0.0"
description = "Structured terrain-following mesh generator for OpenFOAM atmospheric simulations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["terrain", "mesh", "openfoam", "cfd", "atmospheric", "dem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "rasterio>=1.2.0",
    "pyproj>=3.0.0",
    "xarray>=0.19.0",
    "pyvista>=0.32.0",
    "matplotlib>=3.4.0",
    "scikit-image>=0.18.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
cli = ["typer>=0.4.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["terrain_mesh*"]
exclude = ["*.egg-info*"]
